# ViDesc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
API/: Dockerfile  Makefile  README.md  app.py  requirements.txt  setup.cfg
API/config/: config.yml
API/src/app_containers/: app_container1.py
API/src/routes/: predictor.py
API/src/services/: model.py  utils.py  video_descriptor.py  videsc.py
src/datasets/: README.md
src/front/: index.html  style.css
src/models/: README.md  config.py  datasets.py  infirence.py  metric.py  model.py  train.py  utils.py
